--- a/SlideShow-Vue/package.json
+++ b/SlideShow-Vue/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
